[package]
name = "feel"
version = "0.0.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "it goes beyond touch"
keywords = ["touch", "mkdir"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/feel"


[dependencies]
clap = "3.1.15"
colored = "2.0.0"
filetime = "0.2.15"
